Updated API Patch requests & game logic

--- a/index.html
+++ b/index.html
@@ -66,12 +66,16 @@
       </div>
 <br>
 
-      <div class="win">
-        <div data-winning-message-text></div>
-      </div>
+      
+
       <div class="game-options">
       <button id="play-again" class="button">Play Again!</button>
       <button id="quit-game" class="button">Quit Game</button>
       </div>
+
+<br>
+
+  <section id="winning-message"></section>
+
   </body>
 </html>
