--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
    </section>
  <br>
  <br>
-    <section id="winning-message"></section>
+    <section id="winning-message">
+      <div id="tie-message"></div>
+    </section>
+    
   </body>
 </html>
