Fixed tie condition

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
    </section>
  <br>
  <br>
-    <section id="winning-message">
-      <div id="tie-message"></div>
-    </section>
+    <section id="winning-message"></section>
     
   </body>
 </html>
